# omnibreak-skill

./: .gitignore  LICENSE  README.md  README_CN.md  SKILL.md  jest.config.js  package-lock.json  package.json  tsconfig.json
src/: cli.ts  coredump.ts  daemon.ts  gdbMiClient.ts  gdbMiParser.ts  sourceMapper.ts  ssh.ts  trace.ts  transport.ts  types.ts
test/: globalSetup.ts  setup.ts
test/fixtures/: CMakeLists.txt  hello.c  leakdemo.c  leakdemo.cpp  multithread.c  multithread.cpp
test/integration/: cpp.test.ts  debug.test.ts  monitor.test.ts  multi-session.test.ts  trace.test.ts
test/unit/: coredump.test.ts  parser.test.ts  trace.test.ts  transport.test.ts
